--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   background-color: black;
   color: #fff;
+  min-height: 100vh;
 
   display: flex;
   justify-content: center;
